# cookiecutter

./: .gitignore  README.md  pyproject.toml  setup.py
cookiecutter_qtim/: __main__.py  dependencies.py  docker.py
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/: cookiecutter.json
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_docker.sh  pyproject.toml  run_docker.sh  setup.cfg
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/docker/: container_bashrc
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/docs/: inference.md  preprocessing.md  testing.md  training.md
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/notebooks/: README.md
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/singularity/: build_singularity.sh  run_singularity.sh  singularity.recipe
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/slurm/: README.md  slurm_entrypoint.sh  train.job
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/tests/: __init__.py  test_import.py
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/{{ cookiecutter.__project_slug }}/: __init__.py  __main__.py  cli.py  constants.py  enums.py  locations.py
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/{{ cookiecutter.__project_slug }}/commands/: __init__.py  setup_project_dir.py  train.py
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/{{ cookiecutter.__project_slug }}/resources/training_configs/: example.json
cookiecutter_qtim/cookiecutters/cookiecutter-ml-proj/{{ cookiecutter.__project_name }}/{{ cookiecutter.__project_slug }}/visualization/: __init__.py
